--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Bukira Relief Organisation Logo">
+                <img src="images/logo.png" alt="Bukira Relief Organisation Logo">
                 <span>Bukira Relief</span>
             </a>
             
@@ -33,7 +33,7 @@
                     <li><a href="get-involved.html">Get Involved</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
-                <a href="donate.html" class="btn btn-donate">Donate Now</a>
+                <!-- <a href="donate.html" class="btn btn-donate">Donate Now</a> -->
             </div>
         </nav>
     </header>
