--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Bukira Relief Organisation Logo">
+                <img src="images/logo.png" alt="Bukira Relief Organisation Logo">
                 <span>Bukira Relief</span>
             </a>
             
@@ -29,7 +29,7 @@
                     <li><a href="get-involved.html">Get Involved</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
-                <a href="donate.html" class="btn btn-donate">Donate Now</a>
+                <!-- <a href="donate.html" class="btn btn-donate">Donate Now</a> -->
             </div>
         </nav>
     </header>
@@ -49,19 +49,19 @@
             
             <div class="welcome-cards">
                 <div class="card reveal">
-                    <img src="https://images.unsplash.com/photo-1593113598332-6a84c18080c5?q=80&w=2070" alt="Hands holding grain">
+                    <img src="images/hands_grains.png" alt="Hands holding grain">
                     <h3>Our Mission</h3>
                     <p>To provide sustainable relief and empowerment through initiatives that promote productivity, diligence, and resilience.</p>
                     <a href="about.html#mission">Read More</a>
                 </div>
                 <div class="card reveal">
-                    <img src="https://images.unsplash.com/photo-1498673394140-593b33f3c4c2?q=80&w=2070" alt="A person tending to new plants">
+                    <img src="images/farmer.png" alt="A person tending to new plants">
                     <h3>Our Vision</h3>
                     <p>We envision a world where communities transform aid into sustainable prosperity and break the cycle of dependency.</p>
                     <a href="about.html#vision">Read More</a>
                 </div>
                 <div class="card reveal">
-                    <img src="https://images.unsplash.com/photo-1532629345422-7515f3d16bb6?q=80&w=2070" alt="People huddling together">
+                    <img src="images/people.png" alt="People huddling together">
                     <h3>Get Involved</h3>
                     <p>You can help us restore hope. We rely on support from generous individuals to foster productivity and dignity.</p>
                     <a href="get-involved.html">Volunteer or Donate</a>
@@ -90,7 +90,7 @@
     <footer>
         <div class="container footer-content">
             <div class="footer-col reveal">
-                <img src="logo.png" alt="Bukira Relief Logo" class="footer-logo">
+                <img src="images/logo.png" alt="Bukira Relief Logo" class="footer-logo">
                 <p>Restoring hope and fostering self-reliance with compassion and faith.</p>
             </div>
             <div class="footer-col reveal">
