--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Bukira Relief Organisation Logo">
+                <img src="images/logo.png" alt="Bukira Relief Organisation Logo">
                 <span>Bukira Relief</span>
             </a>
             
@@ -33,7 +33,7 @@
                     <li><a href="get-involved.html">Get Involved</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
-                <a href="donate.html" class="btn btn-donate">Donate Now</a>
+                <!-- <a href="donate.html" class="btn btn-donate">Donate Now</a> -->
             </div>
         </nav>
     </header>
@@ -50,12 +50,12 @@
             <div class="container">
                 <div class="gallery-grid">
                     <!-- Add your images here -->
-                    <div class="gallery-item"><img src="https://via.placeholder.com/300x300.png?text=Project+Image+1" alt="Gallery Image"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/300x300.png?text=Project+Image+2" alt="Gallery Image"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/300x300.png?text=Project+Image+3" alt="Gallery Image"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/300x300.png?text=Project+Image+4" alt="Gallery Image"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/300x300.png?text=Project+Image+5" alt="Gallery Image"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/300x300.png?text=Project+Image+6" alt="Gallery Image"></div>
+                    <div class="gallery-item"><img src="images/original craft.jpeg" alt="Gallery Image"></div>
+                    <div class="gallery-item"><img src="images/pic2.JPG" alt="Gallery Image"></div>
+                    <div class="gallery-item"><img src="images/pic3.JPG" alt="Gallery Image"></div>
+                    <div class="gallery-item"><img src="images/pic4.JPG" alt="Gallery Image"></div>
+                    <div class="gallery-item"><img src="images/pic5.JPG" alt="Gallery Image"></div>
+                    <div class="gallery-item"><img src="images/pic8.JPG" alt="Gallery Image"></div>
                 </div>
             </div>
         </section>
